Allow structured image tag options
This aligns with the Docker Compose plugin's options, making it easier
to use this plugin in conjunction with that plugin's build command.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,7 +7,9 @@ steps:
   - label: Shellcheck
     plugins:
       - shellcheck#v1.1.2:
-          files: hooks/**
+          files:
+            - hooks/**
+            - lib/**
 
   - label: Tests
     plugins:
